--- a/Array/Problems.ipynb
+++ b/Array/Problems.ipynb
@@ -172,6 +172,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "6"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums: list[int]) -> int:\n",
+    "        k = 1\n",
+    "        n = len(nums)\n",
+    "        pre_num = nums[0]\n",
+    "        dup_num = 1\n",
+    "        for i in range(1,n):\n",
+    "            if nums[i] == pre_num:\n",
+    "                dup_num += 1\n",
+    "            else:\n",
+    "                dup_num = 1\n",
+    "                pre_num = nums[i]\n",
+    "            if dup_num <= 2:\n",
+    "                nums[k] = nums[i]\n",
+    "                k += 1\n",
+    "        return k"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%cla\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "169 Majority Element\n",
+    "\n",
+    "Given an array nums of size n, return the majority element.\n",
+    "The majority element is the element that appears more than ⌊n / 2⌋ times. You may assume that the majority element always exists in the array.\n",
+    "\n",
+    "hashmap: time complexity O(n), space complexity O(n)\n",
+    "\n",
+    "### Moore Algorithms\n",
+    "\n",
+    "if exists a major element, then the worst situation is that the times it appears is n/2+1, and it appears at the odds number.\n",
+    "Or the longest length the major element appears consecutively is always more than the length of other elements."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def majorityElement(self, nums: list[int]) -> int:\n",
+    "        count = 0\n",
+    "        candidate = 0\n",
+    "\n",
+    "        for num in nums:\n",
+    "            if count == 0:\n",
+    "                candidate = num\n",
+    "\n",
+    "            if num == candidate:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                count -= 1\n",
+    "\n",
+    "        return candidate"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "189 Rotate Array\n",
+    "Given an integer array nums, rotate the array to the right by k steps, where k is non-negative."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverse(self, nums: list[int], i, j) -> None:\n",
+    "        while i < j:\n",
+    "            temp = nums[i]\n",
+    "            nums[i] = nums[j]\n",
+    "            nums[j] = temp\n",
+    "            i+=1\n",
+    "            j-=1\n",
+    "    def rotate(self, nums: list[int], k: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        n = len(nums)\n",
+    "        k = k % n\n",
+    "        self.reverse(nums, 0, n-1)\n",
+    "        self.reverse(nums, 0, k-1)\n",
+    "        self.reverse(nums,k, n-1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "121 Best Time to Buy and Sell Stock\n",
+    "\n",
+    "You are given an array prices where prices[i] is the price of a given stock on the ith day.\n",
+    "\n",
+    "You want to maximize your profit by choosing a single day to buy one stock and choosing a different day in the future to sell that stock.\n",
+    "\n",
+    "Return the maximum profit you can achieve from this transaction. If you cannot achieve any profit, return 0."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
